--- a/package.json
+++ b/package.json
@@ -14,21 +14,34 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@elysiajs/static": "^0.8.0",
-    "elysia": "^0.7.30",
+    "@tanstack/react-query": "^5.17.5",
+    "axios": "^1.6.5",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1",
+    "serialize-javascript": "^6.0.1",
+    "serve-favicon": "^2.5.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/serialize-javascript": "^5.0.4",
+    "@types/serve-favicon": "^2.5.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
     "eslint": "^8.56.0",
-    "eslint-config-pfy": "^1.0.0",
+    "eslint-config-packlify": "^1.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
