--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-TEST=hello
+BACKEND_URL=http://127.0.0.1:8080
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN="packlify-a8deb.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="packlify"
+VITE_FIREBASE_STORAGE_BUCKET="packlify.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
